# stc

./: .gitattributes  .gitignore  .gitmodules  .kodiak.toml  .rustfmt.toml  1.ts  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  LICENSE  LICENSE.md  README.md  a.ts  clippy.toml  cspell.json  deny.toml  package.json  rust-toolchain  stc.code-workspace  tsconfig.json
bindings/libstc/: Cargo.toml
bindings/node-stc/: Cargo.toml
bindings/node-stc/src/: lib.rs
crates/binding_wasm/: Cargo.toml
crates/binding_wasm/src/: lib.rs
crates/rnode/: Cargo.toml
crates/rnode/macros/src/: lib.rs
crates/rnode/src/: lib.rs
crates/rnode/tests/: case1.rs  jsx.rs  opt.rs  opt_vec.rs  vec_box.rs
crates/stc/: Cargo.toml
crates/stc/src/: check.rs  main.rs
crates/stc_arc_cow/: Cargo.toml
crates/stc_arc_cow/src/: boxed.rs  freeze.rs  lib.rs  macros.rs  private.rs
crates/stc_testing/: Cargo.toml
crates/stc_testing/src/: lib.rs
crates/stc_ts_ast_rnode/: Cargo.toml
crates/stc_ts_ast_rnode/src/: lib.rs
crates/stc_ts_base_type_ops/: Cargo.toml
crates/stc_ts_base_type_ops/src/: fix.rs  lib.rs
crates/stc_ts_base_type_ops/src/bindings/: mod.rs
crates/stc_ts_builtin_macro/: Cargo.toml
crates/stc_ts_builtin_macro/src/: lib.rs
crates/stc_ts_builtin_types/: Cargo.toml
crates/stc_ts_builtin_types/lib/: README.md  decorators.d.ts  decorators.legacy.d.ts  es2015.collection.d.ts  es2015.core.d.ts  es2015.iterable.d.ts  es2015.promise.d.ts  es2015.symbol.wellknown.d.ts  es2017.intl.d.ts  es2018.asynciterable.d.ts  es2018.intl.d.ts  es2019.intl.d.ts  es2019.object.d.ts  es2020.bigint.d.ts  es2020.date.d.ts  es2020.intl.d.ts  es2020.promise.d.ts  es2020.symbol.wellknown.d.ts  es2021.full.d.ts  es2021.intl.d.ts  es2021.promise.d.ts  es2021.weakref.d.ts  es2022.array.d.ts  es2022.d.ts  es2022.error.d.ts  es2022.full.d.ts  es2022.intl.d.ts  es2022.regexp.d.ts  es2022.sharedmemory.d.ts  es2023.array.d.ts  es2023.d.ts  es2023.full.d.ts  es5.d.ts  esnext.d.ts  esnext.intl.d.ts  libs.json
crates/stc_ts_builtin_types/macros/src/: lib.rs
crates/stc_ts_builtin_types/src/: lib.rs
crates/stc_ts_dts/: Cargo.toml  build.rs
crates/stc_ts_dts/benches/: fixture.rs
crates/stc_ts_dts/src/: ambient.rs  dce.rs  lib.rs  mutations.rs
crates/stc_ts_dts/tests/: fixture.rs
crates/stc_ts_dts_mutations/: Cargo.toml
crates/stc_ts_dts_mutations/src/: lib.rs
crates/stc_ts_env/: Cargo.toml
crates/stc_ts_env/src/: lib.rs  marks.rs
crates/stc_ts_errors/: Cargo.toml
crates/stc_ts_errors/src/: context.rs  lib.rs  result_ext.rs
crates/stc_ts_errors/src/debug/: debugger.rs  mod.rs
crates/stc_ts_file_analyzer/: Cargo.toml  package.json
crates/stc_ts_file_analyzer/examples/: builtin_lib.rs  file.rs
crates/stc_ts_file_analyzer/macros/src/: lib.rs
crates/stc_ts_file_analyzer/scripts/: auto-unignore.sh  base.sh  fast.sh  instrument.sh  profile.sh  unignore-test.sh  unignore-tests.sh  visualize.sh
crates/stc_ts_file_analyzer/scripts/instrument/: base.sh
crates/stc_ts_file_analyzer/scripts/issues/: sync.ts
crates/stc_ts_file_analyzer/src/: env.rs  lib.rs  loader.rs  tests.rs  type_facts.rs  validator.rs
crates/stc_ts_file_analyzer/src/analyzer/: control_flow.rs  decl_merging.rs  enums.rs  export.rs  generalize.rs  import.rs  mod.rs  pat.rs  props.rs  tests.rs  tsc_helper.rs  util.rs  visit_mut.rs
crates/stc_ts_file_analyzer/src/ty/: mod.rs  type_facts.rs
crates/stc_ts_file_analyzer/src/util/: dashmap.rs  graph.rs  mod.rs
crates/stc_ts_file_analyzer/tests/: base.rs  builtin.rs  perf.rs
crates/stc_ts_file_analyzer/tests/visualize/: tuple-1-2.swc-stderr  tuple-1.swc-stderr
crates/stc_ts_file_analyzer_macros/: Cargo.toml
crates/stc_ts_file_analyzer_macros/src/: lib.rs
crates/stc_ts_generics/: Cargo.toml
crates/stc_ts_generics/src/: expander.rs  lib.rs
crates/stc_ts_generics/src/type_param/: finder.rs  remover.rs  renamer.rs  replacer.rs
crates/stc_ts_lang_server/: Cargo.toml
crates/stc_ts_lang_server/examples/: lsp.rs  stc-debug-lsp.rs
crates/stc_ts_lang_server/src/: config.rs  ir.rs  lib.rs  module_loader.rs  parser.rs  project.rs  server_impl.rs  type_checker.rs
crates/stc_ts_lang_server/tests/: lsp.rs
crates/stc_ts_lang_server/tests/fixture/: initialize_params.json
crates/stc_ts_module_loader/: Cargo.toml
crates/stc_ts_module_loader/src/: analyzer.rs  lib.rs
crates/stc_ts_module_loader/src/resolvers/: mod.rs  node.rs  typescript.rs
crates/stc_ts_ordering/: Cargo.toml
crates/stc_ts_ordering/src/: calc.rs  lib.rs  stmt.rs  types.rs
crates/stc_ts_ordering/tests/: stmt.rs
crates/stc_ts_simple_ast_validations/: Cargo.toml
crates/stc_ts_simple_ast_validations/src/: ambient_fn.rs  lib.rs  yield_check.rs  yield_finder.rs
crates/stc_ts_storage/: Cargo.toml
crates/stc_ts_storage/src/: lib.rs
crates/stc_ts_testing/: Cargo.toml
crates/stc_ts_testing/src/: conformance.rs  lib.rs  lsp.rs  tsc.rs  visualizer.rs
crates/stc_ts_type_checker/: .gitignore  Cargo.toml  build.rs  package.json  remove-only.txt
crates/stc_ts_type_checker/benches/: dts_libs.rs
crates/stc_ts_type_checker/scripts/: base.sh  check.sh  only.sh  prevent-regression.sh  profile.sh  release-time.sh  sort.sh  test.sh
crates/stc_ts_type_checker/src/: lib.rs  resolver.rs  store.rs  typings.rs
crates/stc_ts_type_checker/tests/: README.md  conformance.pass.txt  dts.rs  dts_libs.rs  dts_types.rs  error.rs  pass.rs  tsc-stats.rust-debug  tsc.ignored.txt  tsc.multiresult.txt  tsc.rs  tsc.timings.rust-debug  types.rs  types_pkg.rs
devtools/: Cargo.toml
devtools/src/: copy_tests.rs  main.rs
rnode/: Cargo.toml  README.md
rnode/macros/: Cargo.toml
rnode/macros/src/: lib.rs
rnode/src/: lib.rs
rnode/tests/: case1.rs  simple.rs  vec.rs
testing/: Cargo.toml
testing/src/: lib.rs
utils/: Cargo.toml
utils/arc_cow/: Cargo.toml
utils/arc_cow/src/: boxed.rs  freeze.rs  lib.rs  macros.rs
utils/src/: cache.rs  error.rs  ext.rs  lib.rs  panic_context.rs  stack.rs
utils/src/cache/: mod.rs  mode.rs
utils/src/path/: intern.rs
(+17930 files in other folders)
