[workspace]

[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Speedy web compiler"
edition = "2018"
name = "stc"
publish = false
version = "0.1.0"

[features]
no-threading = [
  "stc_ts_file_analyzer/no-threading",
  "stc_ts_module_loader/no-threading",
]

[dependencies]
anyhow = "1"
env_logger = "0.9.0"
log = "0.4.14"
stc_ts_builtin_types = {path = "./crates/stc_ts_builtin_types"}
stc_ts_env = {path = "./crates/stc_ts_env"}
stc_ts_file_analyzer = {path = "./crates/stc_ts_file_analyzer"}
stc_ts_module_loader = {path = "./crates/stc_ts_module_loader"}
stc_ts_type_checker = {path = "./crates/stc_ts_type_checker"}
stc_utils = {path = "utils"}
structopt = "0.3.20"
swc_common = {version = "0.14.6", features = ["tty-emitter"]}
swc_ecma_ast = "0.58.0"
swc_ecma_parser = "0.78.5"
tokio = "1.7.1"
tracing = {version = "0.1.26", features = ["release_max_level_off"]}
tracing-subscriber = {version = "0.2.19", features = ["env-filter"]}

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
