[workspace]

[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Speedy web compiler"
edition = "2021"
name = "stc"
publish = false
version = "0.1.0"

[features]
no-threading = [
  "stc_ts_file_analyzer/no-threading",
  "stc_ts_module_loader/no-threading",
]

[dependencies]
anyhow = "1.0.66"
env_logger = "0.9.0"
log = "0.4.14"
rayon = "1"
stc_ts_builtin_types = {path = "./crates/stc_ts_builtin_types"}
stc_ts_env = {path = "./crates/stc_ts_env"}
stc_ts_file_analyzer = {path = "./crates/stc_ts_file_analyzer"}
stc_ts_lang_server = {path = "./crates/stc_ts_lang_server"}
stc_ts_module_loader = {path = "./crates/stc_ts_module_loader"}
stc_ts_type_checker = {path = "./crates/stc_ts_type_checker"}
stc_utils = {path = "./crates/stc_utils"}
structopt = "0.3.20"
swc_common = {version = "0.29.13", features = ["tty-emitter"]}
swc_ecma_ast = "0.94.18"
swc_ecma_parser = "0.122.25"
swc_node_base = "0.5.8"
tokio = "1.7.1"
tracing = {version = "0.1.37", features = ["release_max_level_off"]}
tracing-subscriber = {version = "0.2.19", features = ["env-filter"]}

[profile.release]
debug = true
lto = true

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
