[workspace]
members = ["crates/stc", "crates/binding_wasm"]
resolver = "2"

[profile.release]
lto = "off"
# Strip debug symbols
# strip = "symbols"

[profile.bench]
debug = true

[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.build-override]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3
