[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
name = "stc-devtools"
publish = false
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
rayon = "1.5.0"
structopt = "0.3.21"
swc_atoms = "0.2.9"
swc_common = { version = "0.14.6", features = ["tty-emitter", "concurrent"] }
swc_ecma_ast = "0.58.0"
swc_ecma_parser = "0.78.0"
swc_ecma_utils = "0.52.0"
swc_ecma_visit = "0.35.1"
walkdir = "2.3.1"
