[package]
authors = ["강동윤 <kdy1@dudy.kr>"]
edition = "2018"
name = "stc_utils"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.7.2"
once_cell = "1"
swc_common = "0.10.21"

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}

[target.'cfg(windows)'.dependencies]
mimalloc = {version = "0.1"}
