[package]
authors = ["강동윤 <kdy1@dudy.kr"]
description = "Binding for stc, speedy type chcekr"
edition = "2018"
name = "libstc"
publish = false
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
name = "stc"

[dependencies]
stc_checker = {path = "../../typescript/checker"}
stc_dts = {path = "../../typescript/dts"}
