[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "node-stc"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
backtrace = "0.3.60"
napi = {version = "1", features = ["serde-json"]}
napi-derive = {version = "1"}
stc = {path = "../../"}

[build-dependencies]
napi-build = {version = "1"}
