[package]
name = "binding_wasm"
version = "0.1.0"
publish = false
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wasm-bindgen = { version = "0.2.87", features = ["serde"] }
stc_ts_env = { path = "../stc_ts_env" }
stc_ts_errors = { path = "../stc_ts_errors" }
stc_ts_file_analyzer = { path = "../stc_ts_file_analyzer" }
stc_ts_type_checker = { path = "../stc_ts_type_checker" }
swc_common = { version = "0.29.37", features = ["tty-emitter"] }
swc_ecma_ast = "0.100.2"
swc_ecma_loader = "0.41.39"
swc_ecma_parser = "0.130.5"
