[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "rnode"
publish = false
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
rnode_macros = {path = "../rnode_macros"}
serde = {version = "1.0.147", features = ["derive"]}
stc_visit = {path = "../stc_visit"}
swc_common = "0.29.10"
