[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Speedy TypeScript Type Checker"
edition = "2021"
name = "stc"
publish = false
version = "0.1.0"

[features]
no-threading = [
    "stc_ts_file_analyzer/no-threading",
    "stc_ts_module_loader/no-threading",
]

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
rayon = "1"
stc_ts_builtin_types = { path = "../stc_ts_builtin_types" }
stc_ts_env = { path = "../stc_ts_env" }
stc_ts_file_analyzer = { path = "../stc_ts_file_analyzer" }
stc_ts_lang_server = { path = "../stc_ts_lang_server" }
stc_ts_module_loader = { path = "../stc_ts_module_loader" }
stc_ts_type_checker = { path = "../stc_ts_type_checker" }
stc_utils = { path = "../stc_utils" }
swc_common = { version = "0.29.37", features = ["tty-emitter"] }
swc_ecma_ast = "0.100.2"
swc_ecma_parser = "0.130.5"
tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
tracing-subscriber = { version = "0.2.19", features = ["env-filter"] }
