[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_arc_cow"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
stc_visit = {path = "../stc_visit"}
stc_utils = {path = "../stc_utils"}
swc_common = "0.29.37"
tracing = "0.1.37"
triomphe = "0.1.3"
new_debug_unreachable="1"
