[package]
authors = ["강동윤 <kdy1997.dev@gmail.com"]
edition = "2021"
name = "stc_testing"
publish = false
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
once_cell = "1.5.2"
opentelemetry-jaeger = "0.15.0"
tracing = "0.1.37"
tracing-opentelemetry = "0.15.0"
tracing-subscriber = "0.2.20"
