[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_ast_rnode"
publish = false
version = "0.1.0"

[lib]

[dependencies]
num-bigint = "0.2"
rnode = {path = "../rnode"}
serde = { version = "1.0.147", features = ["derive"] }
stc_utils = {path = "../stc_utils"}
stc_visit = {path = "../stc_visit"}
swc_atoms = "0.2.9"
swc_common = "0.14.6"
swc_ecma_ast = "0.58.0"
