[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_base_type_ops"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.1"
rnode = {path = "../rnode/"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_types = {path = "../stc_ts_types"}
stc_utils = {path = "../stc_utils"}
stc_visit = {path = "../stc_visit"}
swc_atoms = "0.4.23"
swc_common = "0.29.10"
swc_ecma_ast = "0.94.14"
tracing = "0.1.37"
