[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_builtin_macro"
publish = false
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
Inflector = "0.11"
pmutil = "0.5.1"
proc-macro2 = "1"
swc_common = "0.29.10"
swc_ecma_parser = "0.122.20"
swc_macros_common = "0.3.6"

[dependencies.syn]
features = ["fold", "parsing"]
version = "1"
