[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_builtin_types"
publish = false
version = "0.0.0"

[dependencies]
fxhash = "0.2.1"
indexmap = "1.3.2"
once_cell = "1"
rayon = "1"
stc_ts_builtin_macro = {path = "../stc_ts_builtin_macro"}
swc_atoms = "0.4.24"
swc_common = "0.29.13"
swc_ecma_ast = "0.94.18"
swc_ecma_parser = "0.122.25"
swc_ecma_visit = "0.80.18"
