[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_builtin_types"
publish = false
version = "0.0.0"

[dependencies]
fxhash = "0.2.1"
indexmap = "1.3.2"
once_cell = "1"
rayon = "1"
stc_ts_builtin_macro = {path = "../stc_ts_builtin_macro"}
swc_atoms = "0.4.36"
swc_common = "0.29.31"
swc_ecma_ast = "0.96.5"
swc_ecma_parser = "0.124.9"
swc_ecma_visit = "0.82.5"
