[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2021"
name = "stc_ts_dts"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
retain_mut = "0.1.1"
rnode = { path = "../rnode/" }
stc_ts_ast_rnode = { path = "../stc_ts_ast_rnode" }
stc_ts_dts_mutations = { path = "../stc_ts_dts_mutations" }
stc_ts_env = { path = "../stc_ts_env" }
stc_ts_types = { path = "../stc_ts_types" }
stc_ts_utils = { path = "../stc_ts_utils" }
swc_common = "0.29.10"
swc_ecma_ast = "0.94.14"

[dev-dependencies]
anyhow = "1.0.66"
stc_testing = { path = "../stc_testing" }
stc_ts_builtin_types = { path = "../stc_ts_builtin_types" }
stc_ts_file_analyzer = { path = "../stc_ts_file_analyzer" }
stc_ts_storage = { path = "../stc_ts_storage" }
swc_common = "0.29.10"
swc_ecma_ast = "0.94.14"
swc_ecma_codegen = "0.127.24"
swc_ecma_parser = "0.122.20"
swc_ecma_transforms = "0.198.27"
swc_ecma_utils = "0.105.25"
swc_ecma_visit = "0.80.14"
testing = "0.31.10"
testing_macros = "0.2.7"
