[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_dts_mutations"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rnode = {path = "../rnode"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_types = {path = "../stc_ts_types"}
