[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_env"
publish = false
version = "0.1.0"

[dependencies]
derivative = "2.1.1"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.130", features = ["derive"] }
string_enum = "0.3.2"
swc_atoms = "0.4.39"
swc_common = { version = "0.29.37", features = ["concurrent"] }
swc_ecma_ast = "0.100.2"
swc_ecma_parser = "0.130.5"
tracing = "0.1.37"
tsconfig = "=0.2.0"

stc_ts_errors = { path = "../stc_ts_errors" }
stc_ts_storage = { path = "../stc_ts_storage" }
stc_ts_type_ops = { path = "../stc_ts_type_ops" }
stc_ts_types = { path = "../stc_ts_types" }
stc_utils = { path = "../stc_utils" }
