[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_errors"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
backtrace = "0.3.60"
derivative = "2.2.0"
fxhash = "0.2.1"
rnode = {path = "../rnode"}
static_assertions = "1.1.0"
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_types = {path = "../stc_ts_types"}
stc_utils = {path = "../stc_utils"}
swc_atoms = "0.4.24"
swc_common = "0.29.14"
swc_ecma_ast = "0.94.19"
swc_ecma_codegen = "0.127.31"
tracing = "0.1.37"
