[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_file_analyzer"
publish = false
version = "0.1.0"

[features]
default = ["fastpath"]
fastpath = []
no-threading = []
profile = ["stc_ts_types/profile"]

[lib]

[dependencies]
ahash = "0.7.6"
auto_impl = "0.5.0"
backtrace = "0.3.60"
bitflags = "1.2.1"
dashmap = {version = "3", features = ["raw-api"]}
derivative = "2.1.1"
fxhash = "0.2.1"
indexmap = "1.6.1"
itertools = "0.10.0"
lexical = {version = "5.2.2", features = ["radix"]}
once_cell = "1.5.2"
petgraph = "0.5.1"
rayon = "1.5.0"
retain_mut = "0.1.1"
rnode = {path = "../rnode"}
rustc-hash = "1.1.0"
serde = "1.0.125"
serde_json = "1.0.87"
sha1 = "0.10.5"
smallvec = "1.5.1"
stc_arc_cow = {path = "../stc_arc_cow"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_base_type_ops = {path = "../stc_ts_base_type_ops"}
stc_ts_builtin_types = {path = "../stc_ts_builtin_types"}
stc_ts_dts_mutations = {path = "../stc_ts_dts_mutations"}
stc_ts_env = {path = "../stc_ts_env"}
stc_ts_errors = {path = "../stc_ts_errors"}
stc_ts_file_analyzer_macros = {path = "../stc_ts_file_analyzer_macros"}
stc_ts_generics = {path = "../stc_ts_generics"}
stc_ts_ordering = {path = "../stc_ts_ordering"}
stc_ts_simple_ast_validations = {path = "../stc_ts_simple_ast_validations"}
stc_ts_storage = {path = "../stc_ts_storage"}
stc_ts_type_cache = {path = "../stc_ts_type_cache"}
stc_ts_type_form = {path = "../stc_ts_type_form"}
stc_ts_type_ops = {path = "../stc_ts_type_ops"}
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
stc_utils = {path = "../stc_utils"}
string_enum = "0.3.1"
swc_atoms = "0.2.9"
swc_common = {version = "0.14.6", features = ["concurrent"]}
swc_ecma_ast = "0.58.0"
swc_ecma_codegen = "0.80.0"
swc_ecma_parser = "0.78.5"
swc_ecma_utils = "0.52.0"
tracing = "0.1.26"

[dev-dependencies]
stc_testing = {path = "../stc_testing"}
stc_ts_testing = {path = "../stc_ts_testing"}
swc_ecma_parser = "0.78.5"
swc_ecma_transforms = "0.94.0"
swc_ecma_visit = "0.44.0"
testing = "0.15.1"
