[package]
authors = ["강동윤 <kdy1997.dev@gmail.com"]
edition = "2021"
name = "stc_ts_file_analyzer_macros"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
pmutil = "0.5.1"
proc-macro2 = "1"
quote = "1"
swc_common = "0.29.29"
swc_ecma_ast = "0.96.3"
swc_ecma_parser = "0.124.5"
swc_macros_common = "0.3.6"
syn = {version = "1", features = ["full"]}
