[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Splitted to reduce compile time"
edition = "2018"
name = "stc_ts_generics"
publish = false
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rayon = "1.5.1"
rnode = {path = "../../../rnode"}
stc_ts_ast_rnode = {path = "../../ast_rnode"}
stc_ts_base_type_ops = {path = "../base_type_ops/"}
stc_ts_errors = {path = "../../errors/"}
stc_ts_types = {path = "../../types"}
stc_ts_utils = {path = "../../utils/"}
stc_utils = {path = "../../../utils/"}
swc_atoms = "0.2.9"
swc_common = "0.14.6"
swc_ecma_ast = "0.58.0"
tracing = "0.1.27"
