[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Splitted to reduce compile time"
edition = "2021"
name = "stc_ts_generics"
publish = false
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
rayon = "1.5.1"
rnode = {path = "../rnode"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_base_type_ops = {path = "../stc_ts_base_type_ops"}
stc_ts_errors = {path = "../stc_ts_errors"}
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
stc_utils = {path = "../stc_utils"}
swc_atoms = "0.4.24"
swc_common = "0.29.13"
swc_ecma_ast = "0.94.18"
tracing = "0.1.37"
