[package]
edition = "2021"
name = "stc_ts_lang_server"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = {version = "4.0.23", features = ["derive"]}
once_cell = "1.16.0"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
stc_ts_builtin_types = { version = "0.0.0", path = "../stc_ts_builtin_types" }
stc_ts_env = { version = "0.1.0", path = "../stc_ts_env" }
stc_ts_errors = { version = "0.1.0", path = "../stc_ts_errors" }
stc_ts_file_analyzer = { version = "0.1.0", path = "../stc_ts_file_analyzer" }
stc_ts_type_checker = { version = "0.1.0", path = "../stc_ts_type_checker" }
stc_ts_types = { version = "0.0.0", path = "../stc_ts_types" }
stc_ts_utils = {version = "0.1.0", path = "../stc_ts_utils"}
stc_utils = {version = "0.1.0", path = "../stc_utils"}
swc_common = {version = "0.29.15", features = ["concurrent"]}
swc_ecma_ast = "0.94.20"
swc_ecma_loader = { version = "0.41.16", features = ["cache", "node", "tsc"] }
swc_ecma_parser = "0.122.29"
tokio = {version = "1.21.2", features = ["rt", "macros", "io-util", "io-std", "rt-multi-thread"]}
tower-lsp = "0.17.0"
tracing = "0.1.37"

[dev-dependencies]
env_logger = "0.9.0"
once_cell = "1.16.0"
stc_ts_testing = {version = "0.1.0", path = "../stc_ts_testing"}
testing = "0.31.15"
tracing-subscriber = {version = "0.2.19", features = ["env-filter"]}
