[package]
edition = "2021"
name = "stc_ts_lang_server"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.23", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21.2", features = [
    "rt",
    "macros",
    "io-util",
    "io-std",
    "rt-multi-thread",
] }
tower-lsp = "0.17.0"
tracing = "0.1.37"
swc_common = "0.29.37"
swc_ecma_ast = "0.100.2"
swc_ecma_parser = "0.130.5"
dashmap = "3"
salsa = { git = "https://github.com/salsa-rs/salsa.git", package = "salsa-2022" }

stc_ts_file_analyzer = { version = "0.1.0", path = "../stc_ts_file_analyzer" }
stc_ts_env = { version = "0.1.0", path = "../stc_ts_env" }
stc_ts_type_checker = { version = "0.1.0", path = "../stc_ts_type_checker" }
stc_ts_module_loader = { version = "0.1.0", path = "../stc_ts_module_loader" }
stc_ts_types = { version = "0.0.0", path = "../stc_ts_types" }
stc_ts_utils = { version = "0.1.0", path = "../stc_ts_utils" }
stc_utils = { version = "0.1.0", path = "../stc_utils" }

[dev-dependencies]
env_logger = "0.9.0"
once_cell = "1.16.0"
stc_ts_testing = { version = "0.1.0", path = "../stc_ts_testing" }
testing = "0.31.15"
tracing-subscriber = { version = "0.2.19", features = ["env-filter"] }
