[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_module_loader"
publish = false
version = "0.1.0"

[features]
no-threading = []

[dependencies]
ahash = "0.7.6"
anyhow = "1.0.66"
auto_impl = "0.5.0"
dashmap = "3"
fxhash = "0.2.1"
log = "0.4.14"
num_cpus = "1"
once_cell = "1"
parking_lot = "0.12.1"
path-clean = "0.1.0"
petgraph = "0.6.2"
rayon = "1"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
stc_utils = {path = "../stc_utils"}
swc_atoms = "0.4.24"
swc_common = { version = "0.29.13", features = ["concurrent"] }
swc_ecma_ast = "0.94.18"
swc_ecma_loader = "0.41.14"
swc_ecma_parser = "0.122.25"
swc_ecma_visit = "0.80.18"
swc_fast_graph = "0.17.14"
swc_graph_analyzer = "0.18.14"
tracing = "0.1.37"
