[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Splitted to reduce compile time"
edition = "2021"
name = "stc_ts_ordering"
publish = false
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
either = "1.6.1"
fxhash = "0.2.1"
indexmap = "1.6.2"
petgraph = "0.6.2"
rayon = "1.5.1"
rnode = {path = "../rnode"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
swc_atoms = "0.4.23"
swc_common = "0.29.10"
swc_fast_graph = "0.17.11"
swc_graph_analyzer = "0.18.11"
tracing = "0.1.37"

[dev-dependencies]
stc_ts_testing = {path = "../stc_ts_testing"}
testing = "0.31.10"
