[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2018"
name = "stc_ts_simple_ast_validations"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnode = {path = "../../../rnode/"}
stc_ts_ast_rnode = {path = "../../ast_rnode/"}
stc_ts_errors = {path = "../../errors/"}
stc_ts_storage = {path = "../../storage/"}
stc_ts_utils = {path = "../../utils"}
stc_utils = {path = "../../../utils/"}
stc_visit = {path = "../../../visit/"}
swc_common = "0.14.6"
swc_ecma_ast = "0.58.0"
tracing = "0.1.26"
