[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_simple_ast_validations"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rnode = {path = "../rnode/"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode/"}
stc_ts_errors = {path = "../stc_ts_errors"}
stc_ts_storage = {path = "../stc_ts_storage"}
stc_ts_utils = {path = "../stc_ts_utils"}
stc_utils = {path = "../stc_utils"}
stc_visit = {path = "../stc_visit"}
swc_common = "0.29.14"
swc_ecma_ast = "0.94.19"
tracing = "0.1.37"
