[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_storage"
publish = false
version = "0.1.0"

[lib]

[dependencies]
auto_impl = "0.5.0"
fxhash = "0.2.1"
stc_ts_errors = {path = "../stc_ts_errors"}
stc_ts_types = {path = "../stc_ts_types"}
stc_utils = {path = "../stc_utils"}
swc_atoms = "0.4.24"
swc_common = "0.29.13"

[dev-dependencies]
testing = "0.31.14"
