[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_testing"
publish = false
version = "0.1.0"

[lib]

[dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
parking_lot = "0.12.1"
regex = "1.7.0"
rnode = {path = "../rnode/"}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
stc_testing = {path = "../stc_testing"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_types = {path = "../stc_ts_types"}
swc_atoms = "0.4.33"
swc_common = "0.29.27"
swc_ecma_ast = "0.96.1"
swc_ecma_codegen = "0.129.2"
swc_ecma_parser = "0.124.2"
swc_ecma_transforms = "0.201.0"
swc_ecma_utils = "0.107.1"
swc_ecma_visit = "0.82.1"
tempdir = "0.3.7"
tokio = {version = "1.22.0", features = ["test-util", "process"]}
tracing = "0.1.37"
