[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
edition = "2021"
name = "stc_ts_testing"
publish = false
version = "0.1.0"

[lib]

[dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
parking_lot = "0.12.1"
regex = "1.7.0"
rnode = {path = "../rnode/"}
rustc-hash = "1.1.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
stc_testing = {path = "../stc_testing"}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_builtin_types = {path = "../stc_ts_builtin_types"}
stc_ts_env = {path = "../stc_ts_env"}
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
swc_atoms = "0.4.39"
swc_common = "0.29.37"
swc_ecma_ast = "0.100.2"
swc_ecma_codegen = "0.135.6"
swc_ecma_parser = "0.130.5"
swc_ecma_transforms = "0.212.14"
swc_ecma_utils = "0.113.6"
swc_ecma_visit = "0.86.2"
tempdir = "0.3.7"
testing = "0.31.15"
tokio = {version = "1.22.0", features = ["test-util", "process"]}
tracing = "0.1.37"
