[package]
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
build = "build.rs"
edition = "2018"
name = "stc_ts_type_checker"
publish = false
version = "0.1.0"

[lib]

[features]
perf = ["tracing/release_max_level_off"]

[dependencies]
dashmap = {version = "3", features = ["raw-api"]}
fxhash = "0.2.1"
log = "0.4.14"
once_cell = "1.5.2"
parking_lot = "0.11.1"
rayon = "1.5.1"
rnode = {path = "../rnode"}
serde = {version = "1.0.130", features = ["derive"]}
stc_ts_ast_rnode = {path = "../stc_ts_ast_rnode"}
stc_ts_builtin_types = {path = "../stc_ts_builtin_types"}
stc_ts_dts = {path = "../stc_ts_dts"}
stc_ts_env = {path = "../stc_ts_env/"}
stc_ts_errors = {path = "../stc_ts_errors"}
stc_ts_file_analyzer = {path = "../stc_ts_file_analyzer"}
stc_ts_module_loader = {path = "../stc_ts_module_loader"}
stc_ts_passes = {path = "../stc_ts_passes"}
stc_ts_storage = {path = "../stc_ts_storage"}
stc_ts_types = {path = "../stc_ts_types"}
stc_ts_utils = {path = "../stc_ts_utils"}
stc_utils = {path = "../stc_utils"}
swc_atoms = "0.2.9"
swc_common = {version = "0.14.6", features = ["concurrent", "tty-emitter"]}
swc_ecma_ast = "0.58.0"
swc_ecma_loader = "0.24.2"
swc_ecma_parser = "0.78.5"
swc_ecma_transforms = "0.94.0"
swc_ecma_visit = "0.44.0"
tracing = {version = "0.1.26", features = ["release_max_level_trace"]}

[dev-dependencies]
anyhow = "1.0.37"
ignore = "0.4.17"
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.61"
stc_testing = {path = "../stc_testing"}
stc_ts_testing = {path = "../stc_ts_testing"}
swc_ecma_codegen = "0.80.0"
swc_ecma_utils = "0.52.0"
testing = "0.15.1"
testing_macros = "0.1.1"
walkdir = "2.3.1"
